# study-ticket-reservation-py

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260622_0001_create_ticket_reservation_domain.py
api/bruno/: .env.sample  README.md  bruno.json  opencollection.yml
api/bruno/auth/: folder.bru  login.bru  login.yml  logout.bru  logout.yml  register.bru  register.yml
api/bruno/environments/: local.bru  local.yml  staging.bru  staging.yml
api/bruno/events/: create-event.bru  create-event.yml  create-seats.bru  create-seats.yml  create-ticket-type.bru  create-ticket-type.yml  folder.bru  get-event.bru  get-event.yml  get-inventory.bru  get-inventory.yml
api/bruno/health/: folder.bru  readiness.bru  (+3 more)
src/app/: __init__.py  main.py
stress/: locustfile.py
stress/k6/: mixed.js  quantity.js  seats.js
stress/results/: python-mixed-100vus-30s-improved.json  python-mixed-100vus-30s-workers.json  python-mixed-100vus-30s.json  python-mixed-50vus-30s.json
tests/: conftest.py
tests/concurrency/: conftest.py  test_confirm_cancel_race.py  test_expiration_worker_race.py  test_quantity_reservation_race.py  test_quantity_reservations.py  test_reservation_lifecycle.py  test_seat_reservation_race.py  test_seat_reservations.py
tests/integration/: test_events.py  test_health.py  test_migrations.py  test_quantity_reservations.py  test_request_context.py  test_reservation_lifecycle.py  test_seat_reservations.py  test_sessions_auth.py  test_stress_consistency.py
(+69 files in other folders)
